[package]
name = "gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]

[features]
debug = []
compatibility = []
fallbacks = []
10 = []
11 = []
12 = []
13 = []
14 = []
15 = []
20 = []
21 = []
30 = []
31 = []
32 = []
33 = []
40 = []
41 = []
42 = []
43 = []
44 = []
45 = []
46 = []


