[package]
name = "gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]

[features]
debug = []
compatibility = []
fallbacks = []
gl10 = []
gl11 = []
gl12 = []
gl13 = []
gl14 = []
gl15 = []
gl20 = []
gl21 = []
gl30 = []
gl31 = []
gl32 = []
gl33 = []
gl40 = []
gl41 = []
gl42 = []
gl43 = []
gl44 = []
gl45 = []
gl46 = []
